proyectoFinal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ast
Rule 1     ast -> statement
Rule 2     statement -> for statement
Rule 3     statement -> while statement
Rule 4     statement -> if statement
Rule 5     statement -> declare ; statement
Rule 6     statement -> print ; statement
Rule 7     statement -> <empty>
Rule 8     while -> WHILE ( expression ) { statement }
Rule 9     for -> FOR ( assign ; expression ; idAssign ) { statement }
Rule 10    if -> IF ( expression ) { statement } elif else
Rule 11    elif -> ELIF ( expression ) { statement } elif
Rule 12    elif -> <empty>
Rule 13    else -> ELSE { statement }
Rule 14    else -> <empty>
Rule 15    type -> INT
Rule 16    type -> FLOAT
Rule 17    type -> STRING
Rule 18    type -> BOOL
Rule 19    declare -> declaration
Rule 20    declare -> assign
Rule 21    declare -> idAssign
Rule 22    declaration -> type ID
Rule 23    assign -> type ID = expression
Rule 24    idAssign -> ID = expression
Rule 25    print -> PRINT expression
Rule 26    expression -> expression + expression
Rule 27    expression -> expression - expression
Rule 28    expression -> expression * expression
Rule 29    expression -> expression / expression
Rule 30    expression -> expression ^ expression
Rule 31    expression -> expression EQUALS expression
Rule 32    expression -> expression NOTEQUALS expression
Rule 33    expression -> expression GTREQTHAN expression
Rule 34    expression -> expression LSSEQTHAN expression
Rule 35    expression -> expression > expression
Rule 36    expression -> expression < expression
Rule 37    expression -> expression AND expression
Rule 38    expression -> expression OR expression
Rule 39    expression -> - expression
Rule 40    expression -> ( expression )
Rule 41    expression -> INTNUM
Rule 42    expression -> FLOATNUM
Rule 43    expression -> STRINGVAL
Rule 44    expression -> boolval
Rule 45    boolval -> TRUE
Rule 46    boolval -> FALSE
Rule 47    expression -> ID

Terminals, with rules where they appear

(                    : 8 9 10 11 40
)                    : 8 9 10 11 40
*                    : 28
+                    : 26
-                    : 27 39
/                    : 29
;                    : 5 6 9 9
<                    : 36
=                    : 23 24
>                    : 35
AND                  : 37
BOOL                 : 18
ELIF                 : 11
ELSE                 : 13
EQUALS               : 31
FALSE                : 46
FLOAT                : 16
FLOATNUM             : 42
FOR                  : 9
GTREQTHAN            : 33
ID                   : 22 23 24 47
IF                   : 10
INT                  : 15
INTNUM               : 41
LSSEQTHAN            : 34
NOTEQUALS            : 32
OR                   : 38
PRINT                : 25
STRING               : 17
STRINGVAL            : 43
TRUE                 : 45
WHILE                : 8
^                    : 30
error                : 
{                    : 8 9 10 11 13
}                    : 8 9 10 11 13

Nonterminals, with rules where they appear

assign               : 9 20
ast                  : 0
boolval              : 44
declaration          : 19
declare              : 5
elif                 : 10 11
else                 : 10
expression           : 8 9 10 11 23 24 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40
for                  : 2
idAssign             : 9 21
if                   : 4
print                : 6
statement            : 1 2 3 4 5 6 8 9 10 11 13
type                 : 22 23
while                : 3

Parsing method: LALR

state 0

    (0) S' -> . ast
    (1) ast -> . statement
    (2) statement -> . for statement
    (3) statement -> . while statement
    (4) statement -> . if statement
    (5) statement -> . declare ; statement
    (6) statement -> . print ; statement
    (7) statement -> .
    (9) for -> . FOR ( assign ; expression ; idAssign ) { statement }
    (8) while -> . WHILE ( expression ) { statement }
    (10) if -> . IF ( expression ) { statement } elif else
    (19) declare -> . declaration
    (20) declare -> . assign
    (21) declare -> . idAssign
    (25) print -> . PRINT expression
    (22) declaration -> . type ID
    (23) assign -> . type ID = expression
    (24) idAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL

    $end            reduce using rule 7 (statement -> .)
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    ast                            shift and go to state 1
    statement                      shift and go to state 2
    for                            shift and go to state 3
    while                          shift and go to state 4
    if                             shift and go to state 5
    declare                        shift and go to state 6
    print                          shift and go to state 7
    assign                         shift and go to state 9
    idAssign                       shift and go to state 10
    declaration                    shift and go to state 13
    type                           shift and go to state 15

state 1

    (0) S' -> ast .



state 2

    (1) ast -> statement .

    $end            reduce using rule 1 (ast -> statement .)


state 3

    (2) statement -> for . statement
    (2) statement -> . for statement
    (3) statement -> . while statement
    (4) statement -> . if statement
    (5) statement -> . declare ; statement
    (6) statement -> . print ; statement
    (7) statement -> .
    (9) for -> . FOR ( assign ; expression ; idAssign ) { statement }
    (8) while -> . WHILE ( expression ) { statement }
    (10) if -> . IF ( expression ) { statement } elif else
    (19) declare -> . declaration
    (20) declare -> . assign
    (21) declare -> . idAssign
    (25) print -> . PRINT expression
    (22) declaration -> . type ID
    (23) assign -> . type ID = expression
    (24) idAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL

    $end            reduce using rule 7 (statement -> .)
    }               reduce using rule 7 (statement -> .)
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    for                            shift and go to state 3
    statement                      shift and go to state 21
    while                          shift and go to state 4
    if                             shift and go to state 5
    declare                        shift and go to state 6
    print                          shift and go to state 7
    assign                         shift and go to state 9
    idAssign                       shift and go to state 10
    declaration                    shift and go to state 13
    type                           shift and go to state 15

state 4

    (3) statement -> while . statement
    (2) statement -> . for statement
    (3) statement -> . while statement
    (4) statement -> . if statement
    (5) statement -> . declare ; statement
    (6) statement -> . print ; statement
    (7) statement -> .
    (9) for -> . FOR ( assign ; expression ; idAssign ) { statement }
    (8) while -> . WHILE ( expression ) { statement }
    (10) if -> . IF ( expression ) { statement } elif else
    (19) declare -> . declaration
    (20) declare -> . assign
    (21) declare -> . idAssign
    (25) print -> . PRINT expression
    (22) declaration -> . type ID
    (23) assign -> . type ID = expression
    (24) idAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL

    $end            reduce using rule 7 (statement -> .)
    }               reduce using rule 7 (statement -> .)
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    while                          shift and go to state 4
    statement                      shift and go to state 22
    for                            shift and go to state 3
    if                             shift and go to state 5
    declare                        shift and go to state 6
    print                          shift and go to state 7
    assign                         shift and go to state 9
    idAssign                       shift and go to state 10
    declaration                    shift and go to state 13
    type                           shift and go to state 15

state 5

    (4) statement -> if . statement
    (2) statement -> . for statement
    (3) statement -> . while statement
    (4) statement -> . if statement
    (5) statement -> . declare ; statement
    (6) statement -> . print ; statement
    (7) statement -> .
    (9) for -> . FOR ( assign ; expression ; idAssign ) { statement }
    (8) while -> . WHILE ( expression ) { statement }
    (10) if -> . IF ( expression ) { statement } elif else
    (19) declare -> . declaration
    (20) declare -> . assign
    (21) declare -> . idAssign
    (25) print -> . PRINT expression
    (22) declaration -> . type ID
    (23) assign -> . type ID = expression
    (24) idAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL

    $end            reduce using rule 7 (statement -> .)
    }               reduce using rule 7 (statement -> .)
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    if                             shift and go to state 5
    statement                      shift and go to state 23
    for                            shift and go to state 3
    while                          shift and go to state 4
    declare                        shift and go to state 6
    print                          shift and go to state 7
    assign                         shift and go to state 9
    idAssign                       shift and go to state 10
    declaration                    shift and go to state 13
    type                           shift and go to state 15

state 6

    (5) statement -> declare . ; statement

    ;               shift and go to state 24


state 7

    (6) statement -> print . ; statement

    ;               shift and go to state 25


state 8

    (9) for -> FOR . ( assign ; expression ; idAssign ) { statement }

    (               shift and go to state 26


state 9

    (20) declare -> assign .

    ;               reduce using rule 20 (declare -> assign .)


state 10

    (21) declare -> idAssign .

    ;               reduce using rule 21 (declare -> idAssign .)


state 11

    (8) while -> WHILE . ( expression ) { statement }

    (               shift and go to state 27


state 12

    (10) if -> IF . ( expression ) { statement } elif else

    (               shift and go to state 28


state 13

    (19) declare -> declaration .

    ;               reduce using rule 19 (declare -> declaration .)


state 14

    (25) print -> PRINT . expression
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression EQUALS expression
    (32) expression -> . expression NOTEQUALS expression
    (33) expression -> . expression GTREQTHAN expression
    (34) expression -> . expression LSSEQTHAN expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTNUM
    (42) expression -> . FLOATNUM
    (43) expression -> . STRINGVAL
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTNUM          shift and go to state 32
    FLOATNUM        shift and go to state 33
    STRINGVAL       shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 29
    boolval                        shift and go to state 35

state 15

    (22) declaration -> type . ID
    (23) assign -> type . ID = expression

    ID              shift and go to state 39


state 16

    (24) idAssign -> ID . = expression

    =               shift and go to state 40


state 17

    (15) type -> INT .

    ID              reduce using rule 15 (type -> INT .)


state 18

    (16) type -> FLOAT .

    ID              reduce using rule 16 (type -> FLOAT .)


state 19

    (17) type -> STRING .

    ID              reduce using rule 17 (type -> STRING .)


state 20

    (18) type -> BOOL .

    ID              reduce using rule 18 (type -> BOOL .)


state 21

    (2) statement -> for statement .

    $end            reduce using rule 2 (statement -> for statement .)
    }               reduce using rule 2 (statement -> for statement .)


state 22

    (3) statement -> while statement .

    $end            reduce using rule 3 (statement -> while statement .)
    }               reduce using rule 3 (statement -> while statement .)


state 23

    (4) statement -> if statement .

    $end            reduce using rule 4 (statement -> if statement .)
    }               reduce using rule 4 (statement -> if statement .)


state 24

    (5) statement -> declare ; . statement
    (2) statement -> . for statement
    (3) statement -> . while statement
    (4) statement -> . if statement
    (5) statement -> . declare ; statement
    (6) statement -> . print ; statement
    (7) statement -> .
    (9) for -> . FOR ( assign ; expression ; idAssign ) { statement }
    (8) while -> . WHILE ( expression ) { statement }
    (10) if -> . IF ( expression ) { statement } elif else
    (19) declare -> . declaration
    (20) declare -> . assign
    (21) declare -> . idAssign
    (25) print -> . PRINT expression
    (22) declaration -> . type ID
    (23) assign -> . type ID = expression
    (24) idAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL

    $end            reduce using rule 7 (statement -> .)
    }               reduce using rule 7 (statement -> .)
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    declare                        shift and go to state 6
    statement                      shift and go to state 41
    for                            shift and go to state 3
    while                          shift and go to state 4
    if                             shift and go to state 5
    print                          shift and go to state 7
    assign                         shift and go to state 9
    idAssign                       shift and go to state 10
    declaration                    shift and go to state 13
    type                           shift and go to state 15

state 25

    (6) statement -> print ; . statement
    (2) statement -> . for statement
    (3) statement -> . while statement
    (4) statement -> . if statement
    (5) statement -> . declare ; statement
    (6) statement -> . print ; statement
    (7) statement -> .
    (9) for -> . FOR ( assign ; expression ; idAssign ) { statement }
    (8) while -> . WHILE ( expression ) { statement }
    (10) if -> . IF ( expression ) { statement } elif else
    (19) declare -> . declaration
    (20) declare -> . assign
    (21) declare -> . idAssign
    (25) print -> . PRINT expression
    (22) declaration -> . type ID
    (23) assign -> . type ID = expression
    (24) idAssign -> . ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL

    $end            reduce using rule 7 (statement -> .)
    }               reduce using rule 7 (statement -> .)
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    PRINT           shift and go to state 14
    ID              shift and go to state 16
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    print                          shift and go to state 7
    statement                      shift and go to state 42
    for                            shift and go to state 3
    while                          shift and go to state 4
    if                             shift and go to state 5
    declare                        shift and go to state 6
    assign                         shift and go to state 9
    idAssign                       shift and go to state 10
    declaration                    shift and go to state 13
    type                           shift and go to state 15

state 26

    (9) for -> FOR ( . assign ; expression ; idAssign ) { statement }
    (23) assign -> . type ID = expression
    (15) type -> . INT
    (16) type -> . FLOAT
    (17) type -> . STRING
    (18) type -> . BOOL

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    assign                         shift and go to state 43
    type                           shift and go to state 44

state 27

    (8) while -> WHILE ( . expression ) { statement }
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression EQUALS expression
    (32) expression -> . expression NOTEQUALS expression
    (33) expression -> . expression GTREQTHAN expression
    (34) expression -> . expression LSSEQTHAN expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTNUM
    (42) expression -> . FLOATNUM
    (43) expression -> . STRINGVAL
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTNUM          shift and go to state 32
    FLOATNUM        shift and go to state 33
    STRINGVAL       shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 45
    boolval                        shift and go to state 35

state 28

    (10) if -> IF ( . expression ) { statement } elif else
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression EQUALS expression
    (32) expression -> . expression NOTEQUALS expression
    (33) expression -> . expression GTREQTHAN expression
    (34) expression -> . expression LSSEQTHAN expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTNUM
    (42) expression -> . FLOATNUM
    (43) expression -> . STRINGVAL
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTNUM          shift and go to state 32
    FLOATNUM        shift and go to state 33
    STRINGVAL       shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 46
    boolval                        shift and go to state 35

state 29

    (25) print -> PRINT expression .
    (26) expression -> expression . + expression
    (27) expression -> expression . - expression
    (28) expression -> expression . * expression
    (29) expression -> expression . / expression
    (30) expression -> expression . ^ expression
    (31) expression -> expression . EQUALS expression
    (32) expression -> expression . NOTEQUALS expression
    (33) expression -> expression . GTREQTHAN expression
    (34) expression -> expression . LSSEQTHAN expression
    (35) expression -> expression . > expression
    (36) expression -> expression . < expression
    (37) expression -> expression . AND expression
    (38) expression -> expression . OR expression

    ;               reduce using rule 25 (print -> PRINT expression .)
    +               shift and go to state 47
    -               shift and go to state 48
    *               shift and go to state 49
    /               shift and go to state 50
    ^               shift and go to state 51
    EQUALS          shift and go to state 52
    NOTEQUALS       shift and go to state 53
    GTREQTHAN       shift and go to state 54
    LSSEQTHAN       shift and go to state 55
    >               shift and go to state 56
    <               shift and go to state 57
    AND             shift and go to state 58
    OR              shift and go to state 59


state 30

    (39) expression -> - . expression
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression EQUALS expression
    (32) expression -> . expression NOTEQUALS expression
    (33) expression -> . expression GTREQTHAN expression
    (34) expression -> . expression LSSEQTHAN expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTNUM
    (42) expression -> . FLOATNUM
    (43) expression -> . STRINGVAL
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTNUM          shift and go to state 32
    FLOATNUM        shift and go to state 33
    STRINGVAL       shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 60
    boolval                        shift and go to state 35

state 31

    (40) expression -> ( . expression )
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression EQUALS expression
    (32) expression -> . expression NOTEQUALS expression
    (33) expression -> . expression GTREQTHAN expression
    (34) expression -> . expression LSSEQTHAN expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTNUM
    (42) expression -> . FLOATNUM
    (43) expression -> . STRINGVAL
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTNUM          shift and go to state 32
    FLOATNUM        shift and go to state 33
    STRINGVAL       shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 61
    boolval                        shift and go to state 35

state 32

    (41) expression -> INTNUM .

    +               reduce using rule 41 (expression -> INTNUM .)
    -               reduce using rule 41 (expression -> INTNUM .)
    *               reduce using rule 41 (expression -> INTNUM .)
    /               reduce using rule 41 (expression -> INTNUM .)
    ^               reduce using rule 41 (expression -> INTNUM .)
    EQUALS          reduce using rule 41 (expression -> INTNUM .)
    NOTEQUALS       reduce using rule 41 (expression -> INTNUM .)
    GTREQTHAN       reduce using rule 41 (expression -> INTNUM .)
    LSSEQTHAN       reduce using rule 41 (expression -> INTNUM .)
    >               reduce using rule 41 (expression -> INTNUM .)
    <               reduce using rule 41 (expression -> INTNUM .)
    AND             reduce using rule 41 (expression -> INTNUM .)
    OR              reduce using rule 41 (expression -> INTNUM .)
    ;               reduce using rule 41 (expression -> INTNUM .)
    )               reduce using rule 41 (expression -> INTNUM .)


state 33

    (42) expression -> FLOATNUM .

    +               reduce using rule 42 (expression -> FLOATNUM .)
    -               reduce using rule 42 (expression -> FLOATNUM .)
    *               reduce using rule 42 (expression -> FLOATNUM .)
    /               reduce using rule 42 (expression -> FLOATNUM .)
    ^               reduce using rule 42 (expression -> FLOATNUM .)
    EQUALS          reduce using rule 42 (expression -> FLOATNUM .)
    NOTEQUALS       reduce using rule 42 (expression -> FLOATNUM .)
    GTREQTHAN       reduce using rule 42 (expression -> FLOATNUM .)
    LSSEQTHAN       reduce using rule 42 (expression -> FLOATNUM .)
    >               reduce using rule 42 (expression -> FLOATNUM .)
    <               reduce using rule 42 (expression -> FLOATNUM .)
    AND             reduce using rule 42 (expression -> FLOATNUM .)
    OR              reduce using rule 42 (expression -> FLOATNUM .)
    ;               reduce using rule 42 (expression -> FLOATNUM .)
    )               reduce using rule 42 (expression -> FLOATNUM .)


state 34

    (43) expression -> STRINGVAL .

    +               reduce using rule 43 (expression -> STRINGVAL .)
    -               reduce using rule 43 (expression -> STRINGVAL .)
    *               reduce using rule 43 (expression -> STRINGVAL .)
    /               reduce using rule 43 (expression -> STRINGVAL .)
    ^               reduce using rule 43 (expression -> STRINGVAL .)
    EQUALS          reduce using rule 43 (expression -> STRINGVAL .)
    NOTEQUALS       reduce using rule 43 (expression -> STRINGVAL .)
    GTREQTHAN       reduce using rule 43 (expression -> STRINGVAL .)
    LSSEQTHAN       reduce using rule 43 (expression -> STRINGVAL .)
    >               reduce using rule 43 (expression -> STRINGVAL .)
    <               reduce using rule 43 (expression -> STRINGVAL .)
    AND             reduce using rule 43 (expression -> STRINGVAL .)
    OR              reduce using rule 43 (expression -> STRINGVAL .)
    ;               reduce using rule 43 (expression -> STRINGVAL .)
    )               reduce using rule 43 (expression -> STRINGVAL .)


state 35

    (44) expression -> boolval .

    +               reduce using rule 44 (expression -> boolval .)
    -               reduce using rule 44 (expression -> boolval .)
    *               reduce using rule 44 (expression -> boolval .)
    /               reduce using rule 44 (expression -> boolval .)
    ^               reduce using rule 44 (expression -> boolval .)
    EQUALS          reduce using rule 44 (expression -> boolval .)
    NOTEQUALS       reduce using rule 44 (expression -> boolval .)
    GTREQTHAN       reduce using rule 44 (expression -> boolval .)
    LSSEQTHAN       reduce using rule 44 (expression -> boolval .)
    >               reduce using rule 44 (expression -> boolval .)
    <               reduce using rule 44 (expression -> boolval .)
    AND             reduce using rule 44 (expression -> boolval .)
    OR              reduce using rule 44 (expression -> boolval .)
    ;               reduce using rule 44 (expression -> boolval .)
    )               reduce using rule 44 (expression -> boolval .)


state 36

    (47) expression -> ID .

    +               reduce using rule 47 (expression -> ID .)
    -               reduce using rule 47 (expression -> ID .)
    *               reduce using rule 47 (expression -> ID .)
    /               reduce using rule 47 (expression -> ID .)
    ^               reduce using rule 47 (expression -> ID .)
    EQUALS          reduce using rule 47 (expression -> ID .)
    NOTEQUALS       reduce using rule 47 (expression -> ID .)
    GTREQTHAN       reduce using rule 47 (expression -> ID .)
    LSSEQTHAN       reduce using rule 47 (expression -> ID .)
    >               reduce using rule 47 (expression -> ID .)
    <               reduce using rule 47 (expression -> ID .)
    AND             reduce using rule 47 (expression -> ID .)
    OR              reduce using rule 47 (expression -> ID .)
    ;               reduce using rule 47 (expression -> ID .)
    )               reduce using rule 47 (expression -> ID .)


state 37

    (45) boolval -> TRUE .

    +               reduce using rule 45 (boolval -> TRUE .)
    -               reduce using rule 45 (boolval -> TRUE .)
    *               reduce using rule 45 (boolval -> TRUE .)
    /               reduce using rule 45 (boolval -> TRUE .)
    ^               reduce using rule 45 (boolval -> TRUE .)
    EQUALS          reduce using rule 45 (boolval -> TRUE .)
    NOTEQUALS       reduce using rule 45 (boolval -> TRUE .)
    GTREQTHAN       reduce using rule 45 (boolval -> TRUE .)
    LSSEQTHAN       reduce using rule 45 (boolval -> TRUE .)
    >               reduce using rule 45 (boolval -> TRUE .)
    <               reduce using rule 45 (boolval -> TRUE .)
    AND             reduce using rule 45 (boolval -> TRUE .)
    OR              reduce using rule 45 (boolval -> TRUE .)
    ;               reduce using rule 45 (boolval -> TRUE .)
    )               reduce using rule 45 (boolval -> TRUE .)


state 38

    (46) boolval -> FALSE .

    +               reduce using rule 46 (boolval -> FALSE .)
    -               reduce using rule 46 (boolval -> FALSE .)
    *               reduce using rule 46 (boolval -> FALSE .)
    /               reduce using rule 46 (boolval -> FALSE .)
    ^               reduce using rule 46 (boolval -> FALSE .)
    EQUALS          reduce using rule 46 (boolval -> FALSE .)
    NOTEQUALS       reduce using rule 46 (boolval -> FALSE .)
    GTREQTHAN       reduce using rule 46 (boolval -> FALSE .)
    LSSEQTHAN       reduce using rule 46 (boolval -> FALSE .)
    >               reduce using rule 46 (boolval -> FALSE .)
    <               reduce using rule 46 (boolval -> FALSE .)
    AND             reduce using rule 46 (boolval -> FALSE .)
    OR              reduce using rule 46 (boolval -> FALSE .)
    ;               reduce using rule 46 (boolval -> FALSE .)
    )               reduce using rule 46 (boolval -> FALSE .)


state 39

    (22) declaration -> type ID .
    (23) assign -> type ID . = expression

    ;               reduce using rule 22 (declaration -> type ID .)
    =               shift and go to state 62


state 40

    (24) idAssign -> ID = . expression
    (26) expression -> . expression + expression
    (27) expression -> . expression - expression
    (28) expression -> . expression * expression
    (29) expression -> . expression / expression
    (30) expression -> . expression ^ expression
    (31) expression -> . expression EQUALS expression
    (32) expression -> . expression NOTEQUALS expression
    (33) expression -> . expression GTREQTHAN expression
    (34) expression -> . expression LSSEQTHAN expression
    (35) expression -> . expression > expression
    (36) expression -> . expression < expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . - expression
    (40) expression -> . ( expression )
    (41) expression -> . INTNUM
    (42) expression -> . FLOATNUM
    (43) expression -> . STRINGVAL
    (44) expression -> . boolval
    (47) expression -> . ID
    (45) boolval -> . TRUE
    (46) boolval -> . FALSE

    -               shift and go to state 30
    (               shift and go to state 31
    INTNUM          shift and go to state 32
    FLOATNUM        shift and go to state 33
    STRINGVAL       shift and go to state 34
    ID              shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38

    expression                     shift and go to state 63
    boolval                        shift and go to state 35

state 41

    (5) statement -> declare ; statement .

    $end            reduce using rule 5 (statement -> declare ; statement .)
    }               reduce using rule 5 (statement -> declare ; statement .)


state 42

    (6) statement -> print ; statement .

    $end            reduce using rule 6 (statement -> print ; statement .)
    }               reduce using rule 6 (statement -> print ; statement .)


state 43

    (9) for -> FOR ( assign . ; expression ; idAssign ) { statement }

    ;               shift and go to state 64


state 44

    (23) assign -> type . ID = expression

    ID              shift and go to state 65


state 45
